--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 * {
   margin: 0;
   padding: 0;
@@ -10,10 +6,6 @@
 
 body {
   font-family: "SF Pro", system-ui, -apple-system, sans-serif;
-}
-
-html,
-body {
   max-width: 100vw;
-  overflow-x: hidden;
+  margin: auto;
 }
